--- a/cms-frontend/style.css
+++ b/cms-frontend/style.css
@@ -7,6 +7,16 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
 }
 
+header {
+    text-align: center;
+}
+
+a {
+    margin: 0 1.5rem;
+    color: #2c3e50;
+    font-size: 1.3rem;
+}
+
 h1 {
     text-align: center;
     font-size: 2.5rem;
@@ -22,7 +32,7 @@ h3{
 
 h2 {
     color: #2c3e50;
-    font-size: 2.0rem;
+    font-size: 1.8rem;
 }
 
 .author {
