--- a/cms-frontend/style.css
+++ b/cms-frontend/style.css
@@ -1,10 +1,15 @@
 body {
     margin: 20px auto;
-    border: 20px solid #bdc3c7;
     padding: 20px;
     width: 80%;
     max-width: 700px;
     font-family: 'Source Sans Pro', sans-serif;
+}
+
+#posts {
+    border: 20px solid #bdc3c7;
+    margin: 20px auto;
+    padding: 20px;
 }
 
 header {
@@ -15,6 +20,12 @@ a {
     margin: 0 1.5rem;
     color: #2c3e50;
     font-size: 1.3rem;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #3498db;;
 }
 
 h1 {
