--- a/cms-frontend/style.css
+++ b/cms-frontend/style.css
@@ -12,7 +12,7 @@ body {
     padding: 20px;
 }
 
-header {
+header, .header {
     text-align: center;
 }
 
@@ -82,4 +82,8 @@ button {
     border-radius: 0.5rem;
     height: 2rem;
     color: white;
+}
+
+#form {
+    display: none;
 }
