--- a/cms-frontend/style.css
+++ b/cms-frontend/style.css
@@ -87,3 +87,13 @@ button {
 #form {
     display: none;
 }
+
+#category {
+    display: none;
+}
+
+#postsForCategory {
+    border: 20px solid #bdc3c7;
+    margin: 20px auto;
+    padding: 20px;
+}
